    were redundant.

  * Removed the 'loadlst' debugger command and the ability to use a
    DASM .lst file.  This code was incomplete, and no longer fits with
    the recent disassembler improvements.  Support for this may return
    in a future release.

  * Modified 'disasm' debugger command to accept a second argument
    indicating the number of lines to disassemble.

  * Added emulation of the "Sega Genesis" controller, with two buttons
    that are directly supported on a real system.

  * The ZLib library is now included in the core code, so Windows
    developers no longer have to track down the ZLIBWAPI archive.

  * Many changes to the MacOS X port, bringing it more in line with
    other systems:

      The application is now known as 'Stella' (instead of StellaOSX).

      Two versions are available: the first is a 32-bit Universal Binary
      for OSX 10.4 - 10.6, and the second is 32/64-bit Intel-only for
      OSX 10.4 - 10.6 (64-bit requires 10.6).  The Intel version is
      compiled with the very latest compiler (Clang), resulting in
      better performance.

      The keyboard handling is changed to match other systems in terms of
      where the keys actually are on the keyboard (ie, the OSX Command key
      corresponds to Alt, and the OSX Control key corresponds to Control).

      The application menu has been cleaned up and simplified, and it
      now shows the correct shortcuts for menu items.

      The settings file is now (according to Apple standards)
      '~/Library/Preferences/net.sourceforge.Stella.plist'.

      The base directory (where all other Stella stuff is located) is now
      '~/Library/Application Support/Stella'.

      Because of these changes, all your settings will have to be entered
      again.

  * Added 'ctrlcombo' commandline argument, which toggles the use of the
    control key as a modifier key.  This is useful if you want to press
    'Control' and 'R' in a two player game, and not have the combination